--- a/list-product.html
+++ b/list-product.html
@@ -7,7 +7,7 @@
     <link href="https://fonts.googleapis.com/css?family=Kotta+One|Lato|Tajawal|karla" rel="stylesheet">
     <link rel="stylesheet" type="text/css" media="screen" href="css/sasstest.css" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-    <script src="http://code.jquery.com/jquery-latest.min.js" type="text/javascript"></script>
+    <script src="https://code.jquery.com/jquery-latest.min.js" type="text/javascript"></script>
     <script src="js/timepice.js"></script>
     <title>Timepice</title>
 </head>
@@ -27,36 +27,39 @@
     <nav id="desktop-nav">
         <ul class="lvl1">
             <li>
-                <a href="#">Tusenö</a>
+                <a href="list-product.html">Tusenö</a>
                 <ul class="lvl2">
-                    <li><a href="show-product.html">Royal</a></li>
-                    <li><a href="show-product.html">Royal</a></li>
-                    <li><a href="show-product.html">Royal</a></li>
-                    <li><a href="show-product.html">Royal</a></li>
+                    <li><a href="show-product.html">Royal steel</a></li>
+                    <li><a href="show-product.html">Seamaster 300</a></li>
+                    <li><a href="show-product.html">GMT master</a></li>
+                    <li><a href="brand.html">Om Tusenö</a></li>
                 </ul>
             </li>
             <li>
-                <a href="#">Wellington</a>
+                <a href="list-product.html">Wellington</a>
                 <ul class="lvl2">
-                    <li><a href="#">Royal</a></li>
-                    <li><a href="#">Royal</a></li>
-                    <li><a href="#">Royal</a></li>
+                    <li><a href="show-product.html">Royal steel</a></li>
+                    <li><a href="show-product.html">Seamaster 300</a></li>
+                    <li><a href="show-product.html">GMT master</a></li>
+                    <li><a href="brand.html">Om Wellington</a></li>
                 </ul>
             </li>
             <li>
-                <a href="#">Triwa</a>
+                <a href="list-product.html">Triwa</a>
                 <ul class="lvl2">
-                    <li><a href="#">Royal</a></li>
-                    <li><a href="#">Royal</a></li>
-                    <li><a href="#">Royal</a></li>
+                    <li><a href="show-product.html">Royal steel</a></li>
+                    <li><a href="show-product.html">Seamaster 300</a></li>
+                    <li><a href="show-product.html">GMT master</a></li>
+                    <li><a href="brand.html">Om Triwa</a></li>
                 </ul>
             </li>
             <li>
-                <a href="#">Panarai</a>
+                <a href="list-product.html">Panarai</a>
                 <ul class="lvl2">
-                    <li><a href="#">Royal</a></li>
-                    <li><a href="#">Royal</a></li>
-                    <li><a href="#">Royal</a></li>
+                    <li><a href="show-product.html">Royal steel</a></li>
+                    <li><a href="show-product.html">Seamaster 300</a></li>
+                    <li><a href="show-product.html">GMT master</a></li>
+                    <li><a href="brand.html">Om Panarai</a></li>
                 </ul>
             </li>
         </ul>
