--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link href="https://fonts.googleapis.com/css?family=Kotta+One|Lato|Tajawal|karla" rel="stylesheet">
     <link rel="stylesheet" type="text/css" media="screen" href="css/sasstest.css" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-    <script src="http://code.jquery.com/jquery-latest.min.js" type="text/javascript"></script>
+    <script src="https://code.jquery.com/jquery-latest.min.js" type="text/javascript"></script>
     <script src="js/timepice.js"></script>
     <title>Timepice</title>
 </head>
@@ -29,34 +29,37 @@
             <li>
                 <a href="list-product.html">Tusenö</a>
                 <ul class="lvl2">
-                    <li><a href="show-product.html">Royal</a></li>
-                    <li><a href="#">Royal</a></li>
-                    <li><a href="#">Royal</a></li>
-                    <li><a href="#">Royal</a></li>
+                    <li><a href="show-product.html">Royal steel</a></li>
+                    <li><a href="show-product.html">Seamaster 300</a></li>
+                    <li><a href="show-product.html">GMT master</a></li>
+                    <li><a href="brand.html">Om Tusenö</a></li>
                 </ul>
             </li>
             <li>
-                <a href="brand.html">Wellington</a>
+                <a href="list-product.html">Wellington</a>
                 <ul class="lvl2">
-                    <li><a href="#">Royal</a></li>
-                    <li><a href="#">Royal</a></li>
-                    <li><a href="#">Royal</a></li>
+                    <li><a href="show-product.html">Royal steel</a></li>
+                    <li><a href="show-product.html">Seamaster 300</a></li>
+                    <li><a href="show-product.html">GMT master</a></li>
+                    <li><a href="brand.html">Om Wellington</a></li>
                 </ul>
             </li>
             <li>
-                <a href="#">Triwa</a>
+                <a href="list-product.html">Triwa</a>
                 <ul class="lvl2">
-                    <li><a href="#">Royal</a></li>
-                    <li><a href="#">Royal</a></li>
-                    <li><a href="#">Royal</a></li>
+                    <li><a href="show-product.html">Royal steel</a></li>
+                    <li><a href="show-product.html">Seamaster 300</a></li>
+                    <li><a href="show-product.html">GMT master</a></li>
+                    <li><a href="brand.html">Om Triwa</a></li>
                 </ul>
             </li>
             <li>
-                <a href="#">Panarai</a>
+                <a href="list-product.html">Panarai</a>
                 <ul class="lvl2">
-                    <li><a href="#">Royal</a></li>
-                    <li><a href="#">Royal</a></li>
-                    <li><a href="#">Royal</a></li>
+                    <li><a href="show-product.html">Royal steel</a></li>
+                    <li><a href="show-product.html">Seamaster 300</a></li>
+                    <li><a href="show-product.html">GMT master</a></li>
+                    <li><a href="brand.html">Om Panarai</a></li>
                 </ul>
             </li>
         </ul>
@@ -108,11 +111,11 @@
             <div class="brand-wrapper">
                 <div class="brand-box">
                     <img src="img/planet-ocean-kvadrat.jpg" alt="model planet ocean omega">
-                    <h3>Triwa</h3>
+                    <a href="brand.html"><h3>Triwa</h3></a>
                 </div>
                 <div class="brand-box">
                     <img src="img/AP-kvadrat.jpg" alt="model planet ocean omega">
-                    <h3>Wellington</h3>
+                    <a href="brand.html"><h3>Wellington</h3></a>
                 </div>
             </div>
         </section>
@@ -138,12 +141,11 @@
                 </div>
             </article>
         </section>
-        <div class="area-header">
-                <h2>Brands</h2>
-        </div>
     </div>
     <footer>
-
+        <div class="footer-content">Watches by Timepice  |  Design by Gustav Broden  |  info@timepice.se</div>
     </footer>
 </body>
 </html>
+
+<!-- PS C:\Users\92gusbro\Documents\webbutveckling\hemsida\Timepice\css> sass --watch style.scss:sasstest.css -->
