--- a/list-product.html
+++ b/list-product.html
@@ -131,7 +131,7 @@
             </section>
     </div>
     <footer>
-        
+        <div class="footer-content">Watches by Timepice  |  Design by Gustav Broden  |  info@timepice.se</div>
     </footer>
 </body>
 </html>
