--- a/brand.html
+++ b/brand.html
@@ -97,7 +97,7 @@
     </div>
         
     <footer>
-        
+        <div class="footer-content">Watches by Timepice  |  Design by Gustav Broden  |  info@timepice.se</div>
     </footer>
 </body>
 </html>
