--- a/show-product.html
+++ b/show-product.html
@@ -94,7 +94,7 @@
         
     </div>
     <footer>
-        
+        <div class="footer-content">Watches by Timepice  |  Design by Gustav Broden  |  info@timepice.se</div>       
     </footer>
 </body>
 </html>
